# DriverAppPrototype

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/driverAppPrototype/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/driverappprototype/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-utils.cpp  opencv-utils.h
app/src/main/java/com/example/dappkotlinonlyprototype/: MainActivity.kt  postProcessor.kt
app/src/main/java/com/example/driverAppPrototype/: CameraHelper.kt  FileLoader.kt  MainActivity.kt  PaintResults.kt  PostProcessor.kt  PrePostProcessor.kt  paintResults.kt
app/src/main/java/com/example/driverappprototype/: MainActivity.kt
app/src/main/res/drawable/: cameravec.xml  cancelvec.xml  eyevec.xml  picture1.xml  playvec.xml  textvec.xml  videovec.xml  visualvec.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/driverAppPrototype/: ExampleUnitTest.kt
app/src/test/java/com/example/driverappprototype/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
